qt6/gen_qxmlstream.nim

proc fcQXmlStreamWriter_writeEndDocument(self: pointer, ): void {.importc: "QXmlStreamWriter_writeEndDocument".}
proc fcQXmlStreamWriter_writeEndElement(self: pointer, ): void {.importc: "QXmlStreamWriter_writeEndElement".}
proc fcQXmlStreamWriter_writeEntityReference(self: pointer, name: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeEntityReference".}
proc fcQXmlStreamWriter_writeNamespace(self: pointer, namespaceUri: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeNamespace".}
proc fcQXmlStreamWriter_writeDefaultNamespace(self: pointer, namespaceUri: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeDefaultNamespace".}
proc fcQXmlStreamWriter_writeProcessingInstruction(self: pointer, target: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeProcessingInstruction".}
proc fcQXmlStreamWriter_writeStartDocument(self: pointer, ): void {.importc: "QXmlStreamWriter_writeStartDocument".}
proc fcQXmlStreamWriter_writeStartDocumentWithVersion(self: pointer, version: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeStartDocumentWithVersion".}
proc fcQXmlStreamWriter_writeStartDocument2(self: pointer, version: struct_miqt_string, standalone: bool): void {.importc: "QXmlStreamWriter_writeStartDocument2".}
proc fcQXmlStreamWriter_writeStartElement(self: pointer, qualifiedName: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeStartElement".}
proc fcQXmlStreamWriter_writeStartElement2(self: pointer, namespaceUri: struct_miqt_string, name: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeStartElement2".}
proc fcQXmlStreamWriter_writeCurrentToken(self: pointer, reader: pointer): void {.importc: "QXmlStreamWriter_writeCurrentToken".}
proc fcQXmlStreamWriter_hasError(self: pointer, ): bool {.importc: "QXmlStreamWriter_hasError".}
proc fcQXmlStreamWriter_writeNamespace2(self: pointer, namespaceUri: struct_miqt_string, prefix: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeNamespace2".}
proc fcQXmlStreamWriter_writeProcessingInstruction2(self: pointer, target: struct_miqt_string, data: struct_miqt_string): void {.importc: "QXmlStreamWriter_writeProcessingInstruction2".}
proc fcQXmlStreamWriter_delete(self: pointer) {.importc: "QXmlStreamWriter_delete".}


func init*(T: type QXmlStreamAttribute, h: ptr cQXmlStreamAttribute): QXmlStreamAttribute =
  T(h: h)
proc create*(T: type QXmlStreamAttribute, ): QXmlStreamAttribute =

  QXmlStreamAttribute.init(fcQXmlStreamAttribute_new())
proc create*(T: type QXmlStreamAttribute, qualifiedName: string, value: string): QXmlStreamAttribute =

  QXmlStreamAttribute.init(fcQXmlStreamAttribute_new2(struct_miqt_string(data: qualifiedName, len: csize_t(len(qualifiedName))), struct_miqt_string(data: value, len: csize_t(len(value)))))
proc create*(T: type QXmlStreamAttribute, namespaceUri: string, name: string, value: string): QXmlStreamAttribute =

  QXmlStreamAttribute.init(fcQXmlStreamAttribute_new3(struct_miqt_string(data: namespaceUri, len: csize_t(len(namespaceUri))), struct_miqt_string(data: name, len: csize_t(len(name))), struct_miqt_string(data: value, len: csize_t(len(value)))))
proc create*(T: type QXmlStreamAttribute, param1: QXmlStreamAttribute): QXmlStreamAttribute =

  QXmlStreamAttribute.init(fcQXmlStreamAttribute_new4(param1.h))
proc isDefault*(self: QXmlStreamAttribute, ): bool =

  fcQXmlStreamAttribute_isDefault(self.h)

proc operatorEqual*(self: QXmlStreamAttribute, other: QXmlStreamAttribute): bool =

  fcQXmlStreamAttribute_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: QXmlStreamAttribute, other: QXmlStreamAttribute): bool =

  fcQXmlStreamAttribute_operatorNotEqual(self.h, other.h)

proc operatorAssign*(self: QXmlStreamAttribute, param1: QXmlStreamAttribute): void =

  fcQXmlStreamAttribute_operatorAssign(self.h, param1.h)

proc delete*(self: QXmlStreamAttribute) =
  fcQXmlStreamAttribute_delete(self.h)

func init*(T: type QXmlStreamNamespaceDeclaration, h: ptr cQXmlStreamNamespaceDeclaration): QXmlStreamNamespaceDeclaration =
  T(h: h)
proc create*(T: type QXmlStreamNamespaceDeclaration, ): QXmlStreamNamespaceDeclaration =

  QXmlStreamNamespaceDeclaration.init(fcQXmlStreamNamespaceDeclaration_new())
proc create*(T: type QXmlStreamNamespaceDeclaration, prefix: string, namespaceUri: string): QXmlStreamNamespaceDeclaration =

  QXmlStreamNamespaceDeclaration.init(fcQXmlStreamNamespaceDeclaration_new2(struct_miqt_string(data: prefix, len: csize_t(len(prefix))), struct_miqt_string(data: namespaceUri, len: csize_t(len(namespaceUri)))))
proc operatorEqual*(self: QXmlStreamNamespaceDeclaration, other: QXmlStreamNamespaceDeclaration): bool =

  fcQXmlStreamNamespaceDeclaration_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: QXmlStreamNamespaceDeclaration, other: QXmlStreamNamespaceDeclaration): bool =

  fcQXmlStreamNamespaceDeclaration_operatorNotEqual(self.h, other.h)

proc delete*(self: QXmlStreamNamespaceDeclaration) =
  fcQXmlStreamNamespaceDeclaration_delete(self.h)

func init*(T: type QXmlStreamNotationDeclaration, h: ptr cQXmlStreamNotationDeclaration): QXmlStreamNotationDeclaration =
  T(h: h)
proc create*(T: type QXmlStreamNotationDeclaration, ): QXmlStreamNotationDeclaration =

  QXmlStreamNotationDeclaration.init(fcQXmlStreamNotationDeclaration_new())
proc operatorEqual*(self: QXmlStreamNotationDeclaration, other: QXmlStreamNotationDeclaration): bool =

  fcQXmlStreamNotationDeclaration_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: QXmlStreamNotationDeclaration, other: QXmlStreamNotationDeclaration): bool =

  fcQXmlStreamNotationDeclaration_operatorNotEqual(self.h, other.h)

proc delete*(self: QXmlStreamNotationDeclaration) =
  fcQXmlStreamNotationDeclaration_delete(self.h)

func init*(T: type QXmlStreamEntityDeclaration, h: ptr cQXmlStreamEntityDeclaration): QXmlStreamEntityDeclaration =
  T(h: h)
proc create*(T: type QXmlStreamEntityDeclaration, ): QXmlStreamEntityDeclaration =

  QXmlStreamEntityDeclaration.init(fcQXmlStreamEntityDeclaration_new())
proc operatorEqual*(self: QXmlStreamEntityDeclaration, other: QXmlStreamEntityDeclaration): bool =

  fcQXmlStreamEntityDeclaration_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: QXmlStreamEntityDeclaration, other: QXmlStreamEntityDeclaration): bool =

  fcQXmlStreamEntityDeclaration_operatorNotEqual(self.h, other.h)

proc delete*(self: QXmlStreamEntityDeclaration) =
  fcQXmlStreamEntityDeclaration_delete(self.h)

func init*(T: type QXmlStreamEntityResolver, h: ptr cQXmlStreamEntityResolver): QXmlStreamEntityResolver =
  T(h: h)
proc resolveEntity*(self: QXmlStreamEntityResolver, publicId: string, systemId: string): string =

  let v_ms = fcQXmlStreamEntityResolver_resolveEntity(self.h, struct_miqt_string(data: publicId, len: csize_t(len(publicId))), struct_miqt_string(data: systemId, len: csize_t(len(systemId))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc resolveUndeclaredEntity*(self: QXmlStreamEntityResolver, name: string): string =

  let v_ms = fcQXmlStreamEntityResolver_resolveUndeclaredEntity(self.h, struct_miqt_string(data: name, len: csize_t(len(name))))
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc delete*(self: QXmlStreamEntityResolver) =
  fcQXmlStreamEntityResolver_delete(self.h)

func init*(T: type QXmlStreamReader, h: ptr cQXmlStreamReader): QXmlStreamReader =
  T(h: h)
proc create*(T: type QXmlStreamReader, ): QXmlStreamReader =

  QXmlStreamReader.init(fcQXmlStreamReader_new())
proc create*(T: type QXmlStreamReader, device: gen_qiodevice.QIODevice): QXmlStreamReader =

  QXmlStreamReader.init(fcQXmlStreamReader_new2(device.h))
proc create*(T: type QXmlStreamReader, data: seq[byte]): QXmlStreamReader =

  QXmlStreamReader.init(fcQXmlStreamReader_new3(struct_miqt_string(data: cast[cstring](if len(data) == 0: nil else: unsafeAddr data[0]), len: csize_t(len(data)))))
proc create2*(T: type QXmlStreamReader, data: string): QXmlStreamReader =

  QXmlStreamReader.init(fcQXmlStreamReader_new4(struct_miqt_string(data: data, len: csize_t(len(data)))))
proc create*(T: type QXmlStreamReader, data: cstring): QXmlStreamReader =

  QXmlStreamReader.init(fcQXmlStreamReader_new5(data))
proc setDevice*(self: QXmlStreamReader, device: gen_qiodevice.QIODevice): void =

  fcQXmlStreamReader_setDevice(self.h, device.h)

proc device*(self: QXmlStreamReader, ): gen_qiodevice.QIODevice =

  gen_qiodevice.QIODevice(h: fcQXmlStreamReader_device(self.h))

proc addData*(self: QXmlStreamReader, data: seq[byte]): void =

  fcQXmlStreamReader_addData(self.h, struct_miqt_string(data: cast[cstring](if len(data) == 0: nil else: unsafeAddr data[0]), len: csize_t(len(data))))

proc addDataWithData*(self: QXmlStreamReader, data: string): void =

  fcQXmlStreamReader_addDataWithData(self.h, struct_miqt_string(data: data, len: csize_t(len(data))))

proc addData2*(self: QXmlStreamReader, data: cstring): void =

  fcQXmlStreamReader_addData2(self.h, data)

proc clear*(self: QXmlStreamReader, ): void =

  fcQXmlStreamReader_clear(self.h)

proc atEnd*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_atEnd(self.h)

proc readNext*(self: QXmlStreamReader, ): QXmlStreamReaderTokenType =

  QXmlStreamReaderTokenType(fcQXmlStreamReader_readNext(self.h))

proc readNextStartElement*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_readNextStartElement(self.h)

proc skipCurrentElement*(self: QXmlStreamReader, ): void =

  fcQXmlStreamReader_skipCurrentElement(self.h)

proc tokenType*(self: QXmlStreamReader, ): QXmlStreamReaderTokenType =

  QXmlStreamReaderTokenType(fcQXmlStreamReader_tokenType(self.h))

proc tokenString*(self: QXmlStreamReader, ): string =

  let v_ms = fcQXmlStreamReader_tokenString(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc setNamespaceProcessing*(self: QXmlStreamReader, namespaceProcessing: bool): void =

  fcQXmlStreamReader_setNamespaceProcessing(self.h, namespaceProcessing)

proc namespaceProcessing*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_namespaceProcessing(self.h)

proc isStartDocument*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isStartDocument(self.h)

proc isEndDocument*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isEndDocument(self.h)

proc isStartElement*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isStartElement(self.h)

proc isEndElement*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isEndElement(self.h)

proc isCharacters*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isCharacters(self.h)

proc isWhitespace*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isWhitespace(self.h)

proc isCDATA*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isCDATA(self.h)

proc isComment*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isComment(self.h)

proc isDTD*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isDTD(self.h)

proc isEntityReference*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isEntityReference(self.h)

proc isProcessingInstruction*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isProcessingInstruction(self.h)

proc isStandaloneDocument*(self: QXmlStreamReader, ): bool =

  fcQXmlStreamReader_isStandaloneDocument(self.h)

proc lineNumber*(self: QXmlStreamReader, ): clonglong =

  fcQXmlStreamReader_lineNumber(self.h)

proc columnNumber*(self: QXmlStreamReader, ): clonglong =

  fcQXmlStreamReader_columnNumber(self.h)

proc characterOffset*(self: QXmlStreamReader, ): clonglong =

  fcQXmlStreamReader_characterOffset(self.h)

proc readElementText*(self: QXmlStreamReader, ): string =

  let v_ms = fcQXmlStreamReader_readElementText(self.h)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret
